practica-7/SwitchLangParser.py
# Generated from SwitchLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SwitchLangParser ( Parser ):

    grammarFileName = "SwitchLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'switch'", "'case'", "'default'", "'('", 
                     "')'", "'{'", "'}'", "':'", "';'", "'='" ]

    symbolicNames = [ "<INVALID>", "SWITCH", "CASE", "DEFAULT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "COLON", "SEMI", "EQ", 
                      "IDENTIFIER", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_expr = 3
    RULE_switchStmt = 4
    RULE_caseBlock = 5
    RULE_defaultBlock = 6

    ruleNames =  [ "program", "statement", "assignment", "expr", "switchStmt", 
                   "caseBlock", "defaultBlock" ]

    EOF = Token.EOF
    SWITCH=1
    CASE=2
    DEFAULT=3
    LPAREN=4
    RPAREN=5
    LBRACE=6
    RBRACE=7
    COLON=8
    SEMI=9
    EQ=10
    IDENTIFIER=11
    NUMBER=12
    WS=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SwitchLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SwitchLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SwitchLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SwitchLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==11:
                self.state = 14
                self.statement()
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 20
            self.match(SwitchLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SwitchLangParser.AssignmentContext,0)


        def SEMI(self):
            return self.getToken(SwitchLangParser.SEMI, 0)

        def switchStmt(self):
            return self.getTypedRuleContext(SwitchLangParser.SwitchStmtContext,0)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SwitchLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 26
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.assignment()
                self.state = 23
                self.match(SwitchLangParser.SEMI)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.switchStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SwitchLangParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(SwitchLangParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(SwitchLangParser.ExprContext,0)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = SwitchLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(SwitchLangParser.IDENTIFIER)
            self.state = 29
            self.match(SwitchLangParser.EQ)
            self.state = 30
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SwitchLangParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(SwitchLangParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SwitchLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = SwitchLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(SwitchLangParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(SwitchLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SwitchLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(SwitchLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(SwitchLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SwitchLangParser.RBRACE, 0)

        def caseBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SwitchLangParser.CaseBlockContext)
            else:
                return self.getTypedRuleContext(SwitchLangParser.CaseBlockContext,i)


        def defaultBlock(self):
            return self.getTypedRuleContext(SwitchLangParser.DefaultBlockContext,0)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_switchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStmt" ):
                listener.enterSwitchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStmt" ):
                listener.exitSwitchStmt(self)




    def switchStmt(self):

        localctx = SwitchLangParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(SwitchLangParser.SWITCH)
            self.state = 35
            self.match(SwitchLangParser.LPAREN)
            self.state = 36
            self.expr()
            self.state = 37
            self.match(SwitchLangParser.RPAREN)
            self.state = 38
            self.match(SwitchLangParser.LBRACE)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 39
                self.caseBlock()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 45
                self.defaultBlock()


            self.state = 48
            self.match(SwitchLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(SwitchLangParser.CASE, 0)

        def expr(self):
            return self.getTypedRuleContext(SwitchLangParser.ExprContext,0)


        def COLON(self):
            return self.getToken(SwitchLangParser.COLON, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SwitchLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SwitchLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_caseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaseBlock" ):
                listener.enterCaseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaseBlock" ):
                listener.exitCaseBlock(self)




    def caseBlock(self):

        localctx = SwitchLangParser.CaseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_caseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(SwitchLangParser.CASE)
            self.state = 51
            self.expr()
            self.state = 52
            self.match(SwitchLangParser.COLON)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==11:
                self.state = 53
                self.statement()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(SwitchLangParser.DEFAULT, 0)

        def COLON(self):
            return self.getToken(SwitchLangParser.COLON, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SwitchLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SwitchLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SwitchLangParser.RULE_defaultBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultBlock" ):
                listener.enterDefaultBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultBlock" ):
                listener.exitDefaultBlock(self)




    def defaultBlock(self):

        localctx = SwitchLangParser.DefaultBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defaultBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SwitchLangParser.DEFAULT)
            self.state = 60
            self.match(SwitchLangParser.COLON)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==11:
                self.state = 61
                self.statement()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





